--- a/prepros.config
+++ b/prepros.config
@@ -78,6 +78,7 @@
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
+      "exportHistory": true,
       "history": []
     },
     "packages": {
@@ -213,6 +214,7 @@
         "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
+        "removeCharset": false,
         "sourceMap": false
       },
       "haml": {
@@ -350,6 +352,7 @@
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
+        "removeCharset": false,
         "sourceComments": false
       },
       "png": {
@@ -847,12 +850,12 @@
         "sourceMap": false,
         "tasks": [
           {
-            "task": "typescript",
+            "task": "copy",
             "enable": true
           },
           {
             "task": "babel",
-            "enable": false
+            "enable": true
           },
           {
             "task": "bundle-js",
